Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Tue Jul 26 21:44:54 2005  Arnold D. Robbins  <arnold@skeeve.com>

	Copyright dates on all relevant files updated to 2005.

Wed Jul  6 17:09:02 2005  Arnold D. Robbins  <arnold@skeeve.com>

	Minor cleanups:

	* io.c (do_index): Remove unused variables `mbclen', `mbs1' and `mbs2'.
	* node.c (wstrstr): Remove unsed variable `j'.
	(dump_wstr): `#ifdef' out, not currently needed.
	* eval.c (op_assign): Move decl of `t1' and `t2' into a separate block for
	the `! HAVE_FMOD' case. Keeps the compiler quiet. Similar for `ltemp'.

Wed Jul  6 16:51:31 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (close_io): Now takes pointer to boolean parameter indicating
	if there was a problem closing standard output or standard error.
	Update it in the right places.
	* awk.h (close_io): Update the declaration.
	* main.c (main): New variable `stdio_problem'. Pass it to `close_io'.
	Check the result and exit non-zero if there was a problem.
	(usage, version): Print warning message if problems with stdout.

	Unrelated:

	* main.c (main): For call to `setlocale' for LC_MESSAGES, just use
	`#ifdef LC_MESSAGES'.  Per Bruno Haible <bruno@clisp.org>.

Wed Jul  6 16:44:58 2005  Jim Meyering  <jim@meyering.net>

	* main.c (init_fds): If any of the STDIN_FILENO, STDOUT_FILENO,
	STDERR_FILENO are initially closed, reopen them with permissions
	contrary to common usage so that any reasonable attempt to use
	them will evoke the same sort of error as reading or writing to
	a closed file descriptor would.

Mon Jul  4 09:38:29 2005  Arnold D. Robbins  <arnold@skeeve.com>

	More multibyte fixes from Kimura Koichi, <kimura.koichi@canon.co.jp>.

	* node.c (format_val, r_dupnode): Spell `wstptr' correctly.
	* regex_internal.c (build_wcs_upper_buffer): Label `offsets_needed' should not
	be inside `#ifdef _LIBC'.
	* regcomp.c (build_charclass): Fix declaration of `class_name' in prototype to